--- a/mifosng-android/src/main/res/layout/fragment_savings_account_transaction.xml
+++ b/mifosng-android/src/main/res/layout/fragment_savings_account_transaction.xml
@@ -4,6 +4,7 @@
   -->
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,54 +25,62 @@
         android:layout_height="match_parent"
         android:layout_margin="16dp">
 
-        <LinearLayout
-            android:id="@+id/linear_layout_1"
-            android:layout_width="fill_parent"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:orientation="horizontal"
-            android:paddingBottom="8dp">
+            app:cardCornerRadius="10dp"
+            app:cardUseCompatPadding="true"
+            android:id="@+id/cv_1">
 
-            <TextView
-                android:id="@+id/tv_clientName"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/linear_layout_1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0.8"
-                android:text="@string/client_name"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:padding="10dp"
+                android:orientation="horizontal">
 
-            <QuickContactBadge
-                android:id="@+id/quickContactBadge_client"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|end"
-                android:layout_marginLeft="100dp" />
+                <TextView
+                    android:id="@+id/tv_clientName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.8"
+                    android:text="@string/client_name"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        </LinearLayout>
+                <QuickContactBadge
+                    android:id="@+id/quickContactBadge_client"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|end"
+                    android:layout_marginLeft="100dp" />
 
-        <View
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+      <!--  <View
             android:id="@+id/divider_1"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:layout_below="@+id/linear_layout_1"
-            android:background="@color/black" />
+            android:layout_below="@+id/cv_1"
+            android:background="@color/black" />-->
 
         <TableLayout
             android:id="@+id/tbl_transaction_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/divider_1"
-            android:layout_marginTop="4dp">
+            android:layout_below="@+id/cv_1"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
             <TableRow
                 android:id="@+id/tbl_transaction_details_row_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:layout_width="0dp"
@@ -96,8 +105,8 @@
                 android:id="@+id/tbl_transaction_details_row_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/transaction_date"
@@ -122,8 +131,8 @@
                 android:id="@+id/tbl_transaction_details_row_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/tv_transaction_amount"
@@ -149,8 +158,8 @@
                 android:id="@+id/tbl_transaction_details_row_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/tv_payment_type"
@@ -178,8 +187,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tbl_transaction_details"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:text="@string/cancel"
+            android:textSize="14sp"
+            android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true" />
 
         <Button
@@ -188,8 +199,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/tbl_transaction_details"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp"
             android:text="@string/review_transaction"
+            android:layout_marginRight="10dp"
             android:layout_alignParentRight="true" />
 
     </RelativeLayout>
