--- a/mifosng-android/src/main/res/layout/fragment_centers_list.xml
+++ b/mifosng-android/src/main/res/layout/fragment_centers_list.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        app:backgroundTint="@color/red_app"
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_add_white_24dp"/>
 
