--- a/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule_footer.xml
+++ b/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule_footer.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp"
+        android:padding="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/loan_repayment_footer_layout"
@@ -24,6 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="14sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="14sp"
+            android:autoSizeMinTextSize="10sp"
             android:textColor="@color/white"
             android:text="@string/medium_text"
             android:gravity="left"/>
@@ -33,6 +37,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="14sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="14sp"
+            android:autoSizeMinTextSize="10sp"
             android:textColor="@color/white"
             android:text="@string/medium_text"
             android:gravity="center"/>
@@ -42,6 +50,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="14sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="14sp"
+            android:autoSizeMinTextSize="10sp"
             android:textColor="@color/white"
             android:text="@string/medium_text"
             android:gravity="right"/>
