--- a/mifosng-android/src/main/res/layout/row_charge_name.xml
+++ b/mifosng-android/src/main/res/layout/row_charge_name.xml
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:text="@string/charge_id" />
 
             <TextView
@@ -52,6 +53,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:text="@string/charge_name" />
 
@@ -73,6 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:text="@string/amount" />
 
             <TextView
@@ -94,6 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:text="@string/due_date" />
 
             <TextView
